test_suite/alan-2022-examples/failing/003670_mutation.alan
source K begin if 35 then relax end if end
